--- a/styles/registro.css
+++ b/styles/registro.css
@@ -1,6 +1,8 @@
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Arial, sans-serif;
-    padding: 20px;
 }
 
 #cadastro-form {
