--- a/styles/produtos.css
+++ b/styles/produtos.css
@@ -1,6 +1,13 @@
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Arial, sans-serif;
-    margin: 20px;
+}
+
+button {
+    margin-top: 10px;
+    padding: 10px 150px;
 }
 
 h1 {
