--- a/styles/login.css
+++ b/styles/login.css
@@ -1,5 +1,25 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
-    background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
+main {
+  flex: 1; /* conteúdo principal ocupa todo o espaço disponível */
+  padding: 20px;
 }
 
 #login-form {
